# QWidget-FancyUI

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_EN.md  compositionwindoweffect.h  mouseeventcolormanagement.cpp  mouseeventcolormanagement.h  theme.cpp  utils.pri
Areo磨砂玻璃效果窗口/: BlurredWindow.pro  SetWindowCompositionAttribute.h  widget.cpp  widget.h  widget.ui
BorderlessWindow/: Border.py  BorderlessWindow.pro  BorderlessWindow.py  MainArea.py  TitleBar.py  border.cpp  border.h  borderlesswindow.cpp  borderlesswindow.h  form.ui  main.cpp  main.py  mainarea.cpp  mainarea.h  rcc.qrc  titlebar.cpp  titlebar.h
DynamicUnderlineLineEdit/: DynamicUnderlineLineEdit.cpp  DynamicUnderlineLineEdit.h  DynamicUnderlineLineEdit.pro  main.cpp
Example/: basicInput.ui  home.ui  main.cpp  widget.cpp  widget.h
FlowLayout/: FlowLayout.pro  README.md  flowlayout.cpp  flowlayout.h
GaussianBlur/: rec.qrc  widget.ui
HoverFillButton/: HoverFillButton.pro  custombuttonbase.cpp  hoverfillbutton.cpp  hoverfillbutton.h  hoverfillbuttonbase.cpp  hoverfillbuttonbase.h  main.cpp
RetractableSidebarWindow/: RetractableSidebarWindow.pro  sidebar.cpp  sidebar.h  sidebaroptionsbutton.cpp  sidebaroptionsbutton.h  sidebarwindow.h  widget.cpp  widget.h
examples/: README.md
image_utils/: image_utils.pri  imageutils.h
src/: FancyAnimation.cpp  FancyAnimation.h  FancyButton.cpp  FancyButton.h  FancyCheckbox.cpp  FancyCheckbox.h  FancyIcon.cpp  FancyIcon.h  FancyImage.cpp  FancyImage.h  FancyLabel.cpp  FancyLabel.h  FancyLayout.cpp  FancyLayout.h  FancyProgressBar.cpp  FancyProgressBar.h  FancyRadiobutton.cpp  FancyRadiobutton.h  FancyRcc.qrc  FancySidebar.cpp  FancySidebar.h  FancySlider.cpp  FancySlider.h  FancyStyle.cpp  FancyStyle.h  FancySvg.cpp  FancySvg.h  FancyTheme.cpp  FancyTheme.h  FancyTitlebar.cpp  FancyTitlebar.h  FancyUI.pri  FancyWidget.cpp  FancyWidget.h  FancyWin32.cpp  FancyWin32.h  FancyWindow.cpp  FancyWindow.h  acrylicmaterial.cpp  acrylicmaterial.h  (+1 more)
windowEffect/: compositionwindoweffect.cpp  compositionwindoweffect.h  dwmwindoweffect.cpp  dwmwindoweffect.h  main.cpp  windowEffect.pro  windoweffect.cpp  windoweffect.h  windowmanager.cpp  windowmanager.h
云母材质+云母Alt材质窗口/: SetWindowCompositionAttribute.h  main.cpp  widget.cpp  widget.h  widget.ui
动态下划线文本框/: DynamicLineEdit_1.pro  DynamicUnderlineLineEdit.h  main.cpp  widget.ui
动态文本框-1/: DynamicLineEdit.cpp  DynamicLineEdit.h  DynamicLineEdit_1.pro  main.cpp  qrc.qrc  widget.cpp  widget.h  widget.ui
动态文本框-2/: dynamiclineedit_2.h
动态边框效果/: DynamicBorderFrame.h  main.cpp  res.qrc  widget.cpp  widget.h
四个简单的按钮动画/: SimpleButton.pro  main.cpp  simplebutton_1.cpp  simplebutton_1.h  simplebutton_2.cpp  simplebutton_2.h  simplebutton_3.cpp  simplebutton_3.h  simplebutton_4.cpp  simplebutton_4.h  widget.cpp  widget.ui
图片-高斯模糊_马赛克_毛玻璃/: Gaussian_blur.pro  widget.cpp  widget.h
悬停波纹按钮/: Corrugated_button.pro  Floating_ripple_button.pro  main.cpp  mypushbutton_QFrame.h  mypushbutton_QPushButton.cpp  mypushbutton_QPushButton.h
悬浮波纹按钮/: main.cpp
标题栏_任意颜色+深色主题标题栏/: setTitleBarColor.pro  widget.cpp  widget.h  widget.ui
波纹填充按钮/: Corrugated_button.pro  main.cpp  mypushbutton_QPushButton.cpp  mypushbutton_QPushButton.h
波纹效果按钮/: main.cpp  mypushbutton_QFrame.cpp  mypushbutton_QFrame.h  mypushbutton_QPushButton.cpp  mypushbutton_QPushButton.h
白天黑夜切换按钮/: day_to_night_btn.cpp  day_to_night_btn.h  widget.h
示例_简单计算器/: DynamicBounding.h  calculator.pro  mypushbutton_QFrame.h  res.qrc  widget.h  widget.ui
系统主题色相关/: 主题色改变时通知.cpp  新建 Python文件 (4).py  获取主题色相关.py
高斯模糊/: main.cpp  (+3 more)
(+393 files in other folders)
